[package]
name = "maxconn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "maxconn-server"
path = "src/bin/server.rs"

[[bin]]
name = "maxconn-client"
path = "src/bin/client.rs"

[[bin]]
name = "test_logic"
path = "src/bin/main.rs"

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3.19", features = ["derive"] }
num_cpus = "1.16.0"
socket2 = { version = "0.5.3", features = ["all"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
